--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,5 +96,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
 }
