--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+    buildFeatures{
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -94,7 +97,8 @@ dependencies {
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
