--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext{
+        kotlinVersion = '1.7.0'
+        navigationVersion = '2.3.5'
+        hiltVersion = '2.40.1'
+        hiltAndroidXVersion = ' 2.40'
+        pagingVersion = '3.1.0'
+        retrofitVersion = '2.9.0'
+        glideVersion = '4.12.0'
+        roomDatabaseVersion = '2.4.0'
+        lifecycleVersion = '2.4.0'
+        okHttpLoggingInterceptor = '4.5.0'
+
+    }
+
+
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.2"
+        classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.0-alpha10"
-//        classpath "com.google.dagger:hilt-android-gradle-plugin:2.28.3-alpha"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.0-rc01"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.40.1"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
