--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+picmars_api_key = "UyIjk4ZbgOMeUqryZ7WRWfRRDTKUMAUwWvSflR8l"
